# Optimization

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: ADMM_example.cpp  CMakeLists.txt  Euclidean_optimization_example.cpp  GradientDescentTest.cpp  LOBPCG_example.cpp  McCormickOpt.cpp  ProximalGradientTest.cpp  Riemannian_optimization_example.cpp  SphereOpt.cpp  TNTUnitTest.cpp  constrained_optimization_example.cpp  gradient_descent_example.cpp  nonconvex_QP_example.cpp  proximal_gradient_example.cpp  smooth_optimization_example.cpp
include/Optimization/Base/: Concepts.h
include/Optimization/Constrained/: Concepts.h  Pair.h  TRSQP.h  TRSQPEigenExtensions.h  TRSQPSubproblemSolvers.h  TRSQPTypes.h  TRSQPUtilityFunctions.h
include/Optimization/Convex/: ADMM.h  Concepts.h  ProximalGradient.h
include/Optimization/LinearAlgebra/: Concepts.h  IterativeSolvers.h  LOBPCG.h
include/Optimization/Riemannian/: Concepts.h  GradientDescent.h  TNLS.h  TNT.h
include/Optimization/Smooth/: Concepts.h  GradientDescent.h  TNT.h
include/Optimization/Util/: Stopwatch.h
tests/: CMakeLists.txt  GradientDescent_unit_test.cpp  IterativeSolvers_unit_test.cpp  LOBPCG_unit_test.cpp  TNLS_unit_test.cpp  TNT_unit_test.cpp  TRSQPEigenExtensions_unit_test.cpp  TRSQP_unit_test.cpp  cmake  gtest_main.cpp
